--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_EVENT_RELEASE_DATE_AND_SUFFIX: ${{ github.event.inputs.date }}
-      RELEASE_BRANCH_NAME: ${{ inputs.date }}
+      RELEASE_BRANCH_NAME: release/${{ inputs.date }}
     steps:
       - name: release_date_and_suffix
-        run: echo "入力値は$RELEASE_DATE_AND_SUFFIX"
+        run: echo "入力値は$RELEASE_BRANCH_NAME"
 
       - name: release_date
         run: echo "Hello World!"
@@ -27,4 +27,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: create_release-branch
-        run: git checkout -b release/$env.RELEASE_BRANCH_NAME
+        run: git checkout -b $RELEASE_BRANCH_NAME
