--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,5 +26,7 @@ jobs:
   release-branch:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - name: create_release-branch
         run: git checkout -b $RELEASE_BRANCH_NAME
