--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,4 +29,4 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: create_release-branch
-        run: git checkout -b $RELEASE_BRANCH_NAME
+        run: git branch $RELEASE_BRANCH_NAME
