--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,3 +30,6 @@ jobs:
 
       - name: create_release-branch
         run: git branch $RELEASE_BRANCH_NAME
+
+      - name: create_release-branch
+        run: git checkout $RELEASE_BRANCH_NAME
