--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: create_release-branch
-        run: git branch $RELEASE_BRANCH_NAME
+        run: git branch $RELEASE_BRANCH_NAME origin/master
 
       - name: create_release-branch
         run: git checkout $RELEASE_BRANCH_NAME
