--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,3 +31,4 @@ jobs:
 
       - name: create_release-branch
         run: git branch $RELEASE_BRANCH_NAME
+          git checkout $RELEASE_BRANCH_NAME
