--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   release-date_and_suffix:
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest
     env:
       RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}
     steps:
@@ -23,7 +23,7 @@ jobs:
         run: echo "Helloworld!2"
 
   release-branch:
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest
     env:
       RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}
     steps:
