バリデーション追加

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,13 +14,12 @@ jobs:
       RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}
     steps:
       - name: release_date_and_suffix
-        run: echo "入力値は$RELEASE_BRANCH_NAME"
-
-      - name: release_date
-        run: echo "Hello World!"
-
-      - name: suffix
-        run: echo "Helloworld!2"
+        run: |
+          echo "入力値は$RELEASE_BRANCH_NAME"
+          if ["$RELEASE_BRANCH_NAME" != "[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9][abcdefghijklmn]"]; then
+              echo "起動を終了します"
+              exit 1
+          fi
 
   release-branch:
     runs-on: ubuntu-latest
