--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,5 +44,6 @@ jobs:
 
       - name: create_release-settings-branch
         run: |
+          git pull origin master
           git branch $RELEASE_SETTINGS_BRANCH_NAME origin/master
           git checkout $RELEASE_SETTINGS_BRANCH_NAME
