--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,8 @@ jobs:
 
       - name: create_release-branch
         run: |
+          #git pull origin masterを追加
+          git pull origin master
           git branch $RELEASE_BRANCH_NAME origin/master
           git checkout $RELEASE_BRANCH_NAME
           git push origin $RELEASE_BRANCH_NAME
