--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,5 +61,5 @@ jobs:
 
       - name: create_pull-request
         run: |
-          PULL_REQUEST_URI=$(gh pr create -B $RELEASE_BRANCH_NAME -t "プルリクエスト作成" -b "")
+          PULL_REQUEST_URI=$(gh pr create -B $RELEASE_BRANCH_NAME -t"プルリクエスト作成")
           echo "::set-output name=PULL_REQUEST_URI::$PULL_REQUEST_URI"
