--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
   release-branch:
     runs-on: ubuntu-latest
     env:
-      RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}${{github.event.inputs.suffix}}
+      RELEASE_BRANCH_NAME: release/${{ github.event.inputs.date }}${{github.event.inputs.suffix}}
     steps:
       - uses: actions/checkout@v4
 
@@ -51,7 +51,7 @@ jobs:
   release-settings-branch:
     runs-on: ubuntu-latest
     env:
-      RELEASE_SETTINGS_BRANCH_NAME: release-settings-${{ github.event.inputs.date }}${{github.event.inputs.suffix}}
+      RELEASE_SETTINGS_BRANCH_NAME: release-settings/${{ github.event.inputs.date }}${{github.event.inputs.suffix}}
     steps:
       - uses: actions/checkout@v4
 
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ github.token }}
-      RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}${{github.event.inputs.suffix}}
+      RELEASE_BRANCH_NAME: release/${{ github.event.inputs.date }}${{github.event.inputs.suffix}}
     steps:
       - name: checkout
         uses: actions/checkout@v4
