--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,12 @@ jobs:
       - name: release_date_and_suffix
         run: |
           echo "入力値は$RELEASE_BRANCH_NAME"
-          if ! [[ "$RELEASE_DATE" =~ [0-9]{8}$ ]]; then
+          if ! [[ "$RELEASE_DATE" =~ ^[0-9]{8}$ ]]; then
               echo "起動を終了します"
               exit 1
           fi
 
-          if ! [[ "$SUFFIX" =~ [a-z]$ ]]; then
+          if ! [[ "$SUFFIX" =~ ^[a-z]$ ]]; then
               echo "起動を終了します"
               exit 1
           fi
