--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       date:
         description: "リリース日を入力"
         required: true
-        default: "20240530"
+        default: "20240401"
       suffix:
         description: "サフィックスを入力"
         required: true
@@ -68,8 +68,14 @@ jobs:
     needs: release-settings-branch
     runs-on: ubuntu-latest
     env:
-      GH_TOKEN: ${{ github.token }}
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
       RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}
     steps:
       - name: checkout
         uses: actions/checkout@v4
+
+      - name: create_pull-request
+        run: |
+          gh auth login --with-token <<< "${{ secrets.GH_TOKEN }}"
+          PULL_REQUEST_URI=$(gh pr create -B $RELEASE_BRANCH_NAME -t "プルリクエスト作成" -b "")
+          echo "PULL_REQUEST_URI=$PULL_REQUEST_URI" >> $GITHUB_ENV
