--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,8 +62,8 @@ jobs:
           git pull origin master
           git branch $RELEASE_SETTINGS_BRANCH_NAME origin/master
           git checkout $RELEASE_SETTINGS_BRANCH_NAME
-          git add $RELEASE_SETTINGS_BRANCH_NAME
-          git commit $RELEASE_SETTINGS_BRANCH_NAME -m "release.ymlファイル編集"
+          git add .github/workflows/release.yml
+          git commit .github/workflows/release.yml -m "release.ymlファイル編集"
 
   create_pull-request:
     needs: release-settings-branch
