--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,8 +62,6 @@ jobs:
           git pull origin master
           git branch $RELEASE_SETTINGS_BRANCH_NAME origin/master
           git checkout $RELEASE_SETTINGS_BRANCH_NAME
-          git add .github/workflows/release.yml
-          git commit .github/workflows/release.yml -m "release.ymlファイル編集"
 
   create_pull-request:
     needs: release-settings-branch
@@ -77,5 +75,9 @@ jobs:
 
       - name: create_pull-request
         run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git add .github/workflows/release.yml
+          git commit .github/workflows/release.yml -m "release.ymlファイル編集"
           PULL_REQUEST_URI=$(gh pr create -B $RELEASE_BRANCH_NAME -t "プルリクエスト作成" -b "")
           echo "PULL_REQUEST_URI=$PULL_REQUEST_URI" >> $GITHUB_ENV
