--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       date:
         description: "リリース日を入力"
         required: true
-        default: "20240530"
+        default: "20240410"
       suffix:
         description: "サフィックスを入力"
         required: true
@@ -21,7 +21,7 @@ jobs:
     steps:
       - name: release_date_and_suffix
         run: |
-          echo "ワークフローを実行しているOSは${{ runner.os }}
+          echo "ワークフローを実行しているOSは${{ runner.os }}"
           echo "ブランチ名は$RELEASE_BRANCH_NAME"
           if ! [[ "$RELEASE_DATE" =~ ^[0-9]{8}$ ]]; then
               echo "起動を終了します"
