--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RELEASE_DATE: ${{ github.event.inputs.date }}
-      SUFFIX: ${{github.event.inputs.suffix}}
+      SUFFIX: ${{ github.event.inputs.suffix }}
       RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}
     steps:
       - name: release_date_and_suffix
@@ -51,6 +51,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RELEASE_SETTINGS_BRANCH_NAME: release-settings/${{ github.event.inputs.date }}
+      PARAMETER_NAME: ${{ github.event.inputs.date }}${{ github.event.inputs.suffix }}
     steps:
       - uses: actions/checkout@v4
 
@@ -62,7 +63,7 @@ jobs:
 
       - name: replace_file_parameters
         run: |
-          sed s/20240401a/00000000b/ intro.txt
+          sed -E -i '' 's/[0-9]{8}[a-z]$/$PARAMETER_NAME/' intro.txt
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           git push origin $RELEASE_SETTINGS_BRANCH_NAME
