--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,7 @@ jobs:
 
       - name: replace_file_parameters
         run: |
+          git pull origin master
           sed -E -i '' "s/[0-9]{8}[a-z]$/${PARAMETER_NAME}/" intro.txt
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
