--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,10 +60,7 @@ jobs:
           git pull origin master
           git branch $RELEASE_SETTINGS_BRANCH_NAME origin/master
           git checkout $RELEASE_SETTINGS_BRANCH_NAME
-
-      - name: replace_file_parameters
-        run: |
-          sed "s/[0-9]{8}[a-z]$/${PARAMETER_NAME}/" intro.txt
+          sed -E -i '' "s/[0-9]{8}[a-z]$/${PARAMETER_NAME}/" intro.txt
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           git push origin $RELEASE_SETTINGS_BRANCH_NAME
