--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,8 +60,13 @@ jobs:
           git pull origin master
           git branch $RELEASE_SETTINGS_BRANCH_NAME origin/master
           git checkout $RELEASE_SETTINGS_BRANCH_NAME
+
+      - name: replace_file_parameters
+        run: |
           sed -E -i "" "s/[0-9]{8}[a-z]$/${PARAMETER_NAME}/" intro_git/intro.txt
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add intro_git/intro.txt
+          git commit -m "Update intro.txt with ${PARAMETER_NAME}"
           git config --global user.name "github-actions[bot]"
           git push origin $RELEASE_SETTINGS_BRANCH_NAME
 
