--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
         run: |
           sed -E -i "s/[0-9]{8}[a-z]$/${PARAMETER_NAME}/" ../intro.txt
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add intro_git/intro.txt
+          git add ../intro.txt
           git commit -m "Update intro.txt with ${PARAMETER_NAME}"
           git config --global user.name "github-actions[bot]"
           git push origin $RELEASE_SETTINGS_BRANCH_NAME
