--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,13 +61,19 @@ jobs:
           git branch $RELEASE_SETTINGS_BRANCH_NAME origin/master
           git checkout $RELEASE_SETTINGS_BRANCH_NAME
 
+      - name: list_files
+        run: |
+          pwd
+          ls -la
+          ls -la ../
+
       - name: replace_file_parameters
         run: |
           sed -E -i "s/[0-9]{8}[a-z]$/${PARAMETER_NAME}/" ../intro.txt
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
           git add ../intro.txt
           git commit -m "Update intro.txt with ${PARAMETER_NAME}"
-          git config --global user.name "github-actions[bot]"
           git push origin $RELEASE_SETTINGS_BRANCH_NAME
 
   create_pull-request:
