--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,16 +63,18 @@ jobs:
 
       - name: list_files
         run: |
-          pwd
+          echo "Current directory: $(pwd)"
+          echo "Files in current directory:"
           ls -la
+          echo "Files in parent directory:"
           ls -la ../
 
       - name: replace_file_parameters
         run: |
-          sed -E -i "s/[0-9]{8}[a-z]$/${PARAMETER_NAME}/" ../intro.txt
+          sed -E -i "s/[0-9]{8}[a-z]$/${PARAMETER_NAME}/" intro.txt
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git add ../intro.txt
+          git add intro.txt
           git commit -m "Update intro.txt with ${PARAMETER_NAME}"
           git push origin $RELEASE_SETTINGS_BRANCH_NAME
 
