--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
     needs: release-settings-branch
     runs-on: ubuntu-latest
     env:
-      GH_TOKEN: ${{ github.token }}
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
       RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}
     steps:
       - name: checkout
