--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
               exit 1
           fi
           echo "releaseブランチを作成します"
+
   release-branch:
     needs: validate_release-date_and_suffix
     runs-on: ubuntu-latest
@@ -44,6 +45,7 @@ jobs:
         run: |
           git checkout -b $RELEASE_BRANCH_NAME
           git push origin $RELEASE_BRANCH_NAME
+
   release-settings-branch:
     needs: release-branch
     runs-on: ubuntu-latest
@@ -66,19 +68,17 @@ jobs:
           git add intro.txt
           git commit -m "Update intro.txt with ${PARAMETER_NAME}"
           git push origin $RELEASE_SETTINGS_BRANCH_NAME
+
   create_pull-request:
     needs: release-settings-branch
     runs-on: ubuntu-latest
     env:
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
       RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}
       RELEASE_SETTINGS_BRANCH_NAME: release-settings/${{ github.event.inputs.date }}
     steps:
       - uses: actions/checkout@v4
 
       - name: create_pull-request
-        uses: peter-evans/create-pull-request@v4
-        with:
-          commit-message: "リリース設定ブランチのプルリクエスト: ${{ env.RELEASE_SETTINGS_BRANCH_NAME }}"
-          title: "${{ env.RELEASE_SETTINGS_BRANCH_NAME }}から${{ env.RELEASE_BRANCH_NAME }}へのプルリクエスト"
-          base: ${{ env.RELEASE_SETTINGS_BRANCH_NAME }}
-          branch: ${{ env.RELEASE_BRANCH_NAME }}
+        run: |
+          gh pr create -B "$RELEASE_BRANCH_NAME" -H "$RELEASE_SETTINGS_BRANCH_NAME" -t "リリース設定のプルリクエスト: $RELEASE_SETTINGS_BRANCH_NAME" -b "このプルリクエストは${RELEASE_SETTINGS_BRANCH_NAME}から${RELEASE_BRANCH_NAME}への変更を提案します。"
