--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,14 +83,4 @@ jobs:
 
       - name: create_pull-request
         run: |
-          pr_data=$(jq -n \
-          --arg title "リリース設定のプルリクエスト: $RELEASE_SETTINGS_BRANCH_NAME" \
-          --arg head "$RELEASE_SETTINGS_BRANCH_NAME" \
-          --arg base "$RELEASE_BRANCH_NAME" \
-          --arg body "このプルリクエストは${RELEASE_SETTINGS_BRANCH_NAME}から${RELEASE_BRANCH_NAME}への変更を提案します。" \
-          '{title: $title, head: $head, base: $base, body: $body}')
-
-          curl -s -X POST -H "Authorization: token $GITHUB_TOKEN" \
-              -H "Accept: application/vnd.github.v3+json" \
-              https://api.github.com/repos/${{ github.repository }}/pulls \
-              -d "$pr_data"
+          gh pr create -B "$RELEASE_BRANCH_NAME" -H "$RELEASE_SETTINGS_BRANCH_NAME" -t "リリース設定のプルリクエスト: $RELEASE_SETTINGS_BRANCH_NAME" -b "このプルリクエストは${RELEASE_SETTINGS_BRANCH_NAME}から${RELEASE_BRANCH_NAME}への変更を提案します。"
